fixed checkbox alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,7 +40,7 @@ ul {
     list-style: none;
     text-align: left;
     padding: 15px;
-    background: #171a1f;
+    background: #171a1f02;
     border-radius: 5px;
 }
 
@@ -48,44 +48,10 @@ li {
     padding: 15px;
     font-size: 1.5rem;
     margin-bottom: 15px;
-    background: #282c34;
+    background: #282c3400;
     border-radius: 5px;
     overflow-wrap: break-word;
     cursor: pointer;
-}
-
-@media only screen and (min-width: 300px) {
-    .App {
-        width: 80%;
-    }
-    input {
-        width: 100%
-    }
-    button {
-        width: 100%;
-        margin-top: 15px;
-        margin-left: 0;
-    }
-}
-
-@media only screen and (min-width: 640px) {
-    .App {
-        width: 60%;
-    }
-    input {
-        width: 50%;
-    }
-    button {
-        width: 30%;
-        margin-left: 10px;
-        margin-top: 0;
-    }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
 }
 
 .App-header {
@@ -110,4 +76,92 @@ li {
     to {
         transform: rotate(360deg);
     }
+}
+
+
+/* Customize the label (the container) */
+
+.container {
+    display: block;
+    margin: auto;
+    width: 50%;
+    text-align: left;
+    position: relative;
+    padding-left: 35px;
+    margin-bottom: 12px;
+    margin-right: 13px;
+    cursor: pointer;
+    font-size: 22px;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+
+/* Hide the browser's default checkbox */
+
+.container input {
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+}
+
+
+/* Create a custom checkbox */
+
+.checkmark {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+}
+
+
+/* On mouse-over, add a grey background color */
+
+.container:hover input~.checkmark {
+    background-color: #ccc;
+}
+
+
+/* When the checkbox is checked, add a blue background */
+
+.container input:checked~.checkmark {
+    background-color: #2196F3;
+}
+
+
+/* Create the checkmark/indicator (hidden when not checked) */
+
+.checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+}
+
+
+/* Show the checkmark when checked */
+
+.container input:checked~.checkmark:after {
+    display: block;
+}
+
+
+/* Style the checkmark/indicator */
+
+.container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
 }
